--- a/html5up-strata/index.html
+++ b/html5up-strata/index.html
@@ -403,8 +403,23 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 		<!-- Footer -->
 			<!-- Footer -->
+<!-- Footer -->
 <footer id="footer">
     <div class="inner">
+        
+        <!-- SRE Status Badge -->
+        <div style="margin-bottom: 2em; background: rgba(0,0,0,0.2); padding: 10px; border-radius: 5px; display: inline-block;">
+            <a href="https://stats.uptimerobot.com/YUKk3Aupcv" target="_blank" style="text-decoration: none; border-bottom: none; color: inherit; display: flex; align-items: center; gap: 10px;">
+                <!-- Pulsing Green Dot -->
+                <span style="position: relative; display: flex; width: 12px; height: 12px;">
+                  <span style="position: absolute; display: inline-flex; height: 100%; width: 100%; border-radius: 50%; background-color: #22c55e; opacity: 0.7; animation: ping 1.5s cubic-bezier(0, 0, 0.2, 1) infinite;"></span>
+                  <span style="position: relative; display: inline-flex; border-radius: 50%; height: 12px; width: 12px; background-color: #16a34a;"></span>
+                </span>
+                <span style="font-size: 0.9em; font-family: monospace;">SYSTEM STATUS: <strong style="color: #4ade80;">100% OPERATIONAL</strong></span>
+            </a>
+        </div>
+        <!-- End Status Badge -->
+
         <ul class="icons">
             <li><a href="https://linkedin.com/in/DevulapalliNeelima" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
             <li><a href="https://github.com/Whatever2095" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
@@ -415,6 +430,16 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
         </ul>
     </div>
 </footer>
+
+<!-- Add the CSS animation for the pulsing dot right before the closing body tag -->
+<style>
+    @keyframes ping {
+        75%, 100% {
+            transform: scale(2.5);
+            opacity: 0;
+        }
+    }
+</style>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
